// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Header rendering tests isAuthenticated false - test 1`] = `
<div>
  <header
    class="border-b bg-background"
    data-testid="header"
  >
    <div
      class="mx-auto flex max-w-7xl items-center px-4 py-3 sm:gap-4 sm:px-6 sm:py-4"
    >
      <div
        class="flex-1"
      >
        <a
          class="text-lg font-bold whitespace-nowrap sm:text-xl"
          data-testid="app-link"
          href="/"
        >
          Vision Notes
        </a>
      </div>
      <div
        class="flex-2"
      >
        <div
          class="hidden items-center justify-between gap-6 sm:flex"
          data-testid="desktop-nav"
        >
          <nav
            class="flex items-center gap-1"
            data-testid="navigation"
          >
            <a
              class="rounded-md px-3 py-2 font-medium text-foreground/75 transition-colors hover:bg-accent hover:text-foreground"
              data-testid="explore-nav-item"
              href="/explore"
            >
              Entdecken
            </a>
            <a
              class="rounded-md px-3 py-2 font-medium text-foreground/75 transition-colors hover:bg-accent hover:text-foreground"
              data-testid="pricing-nav-item"
              href="https://www.vision-notes.com/pricing"
            >
              Preise
            </a>
            <a
              class="rounded-md px-3 py-2 font-medium text-foreground/75 transition-colors hover:bg-accent hover:text-foreground"
              data-testid="blog-nav-item"
              href="https://www.vision-notes.com/blog"
            >
              Blog
            </a>
          </nav>
          <div
            class="flex items-center gap-3"
          >
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3"
              data-slot="button"
              data-testid="sign-in-link"
              href="/auth/sign-in"
            >
              Anmelden
            </a>
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3"
              data-slot="button"
              data-testid="sign-up-link"
              href="/auth/sign-up"
            >
              Kostenlos starten
            </a>
          </div>
        </div>
        <div
          class="flex justify-end"
          data-testid="mobile-nav"
        >
          <div
            data-slot="sheet"
            data-testid="mock-react-dialog-root"
          >
            <button
              aria-label="Menü öffnen"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-9 sm:hidden"
              data-slot="button"
              data-testid="mobile-nav-trigger"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-menu h-7 w-7"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 5h16"
                />
                <path
                  d="M4 12h16"
                />
                <path
                  d="M4 19h16"
                />
              </svg>
            </button>
            <div
              data-slot="sheet-portal"
              data-testid="mock-react-dialog-portal"
            >
              <div
                class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
                data-slot="sheet-overlay"
                data-testid="mock-react-dialog-overlay"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header rendering tests isAuthenticated true - test 1`] = `
<div>
  <header
    class="border-b bg-background"
    data-testid="header"
  >
    <div
      class="mx-auto flex max-w-7xl items-center px-4 py-3 sm:gap-4 sm:px-6 sm:py-4"
    >
      <div
        class="flex-1"
      >
        <a
          class="text-lg font-bold whitespace-nowrap sm:text-xl"
          data-testid="app-link"
          href="/"
        >
          Vision Notes
        </a>
      </div>
      <div
        class="flex-2"
      >
        <div
          class="hidden items-center justify-between gap-6 sm:flex"
          data-testid="desktop-nav"
        >
          <nav
            class="flex items-center gap-1"
            data-testid="navigation"
          >
            <a
              class="rounded-md px-3 py-2 font-medium text-foreground/75 transition-colors hover:bg-accent hover:text-foreground"
              data-testid="explore-nav-item"
              href="/explore"
            >
              Entdecken
            </a>
            <a
              class="rounded-md px-3 py-2 font-medium text-foreground/75 transition-colors hover:bg-accent hover:text-foreground"
              data-testid="pricing-nav-item"
              href="https://www.vision-notes.com/pricing"
            >
              Preise
            </a>
            <a
              class="rounded-md px-3 py-2 font-medium text-foreground/75 transition-colors hover:bg-accent hover:text-foreground"
              data-testid="blog-nav-item"
              href="https://www.vision-notes.com/blog"
            >
              Blog
            </a>
          </nav>
          <div
            class="flex items-center gap-3"
          >
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3"
              data-slot="button"
              data-testid="templates-link"
              href="/"
            >
              Zur Bibliothek
            </a>
          </div>
        </div>
        <div
          class="flex justify-end"
          data-testid="mobile-nav"
        >
          <div
            data-slot="sheet"
            data-testid="mock-react-dialog-root"
          >
            <button
              aria-label="Menü öffnen"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-9 sm:hidden"
              data-slot="button"
              data-testid="mobile-nav-trigger"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-menu h-7 w-7"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 5h16"
                />
                <path
                  d="M4 12h16"
                />
                <path
                  d="M4 19h16"
                />
              </svg>
            </button>
            <div
              data-slot="sheet-portal"
              data-testid="mock-react-dialog-portal"
            >
              <div
                class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
                data-slot="sheet-overlay"
                data-testid="mock-react-dialog-overlay"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
</div>
`;
